src/objects/Outbound_Notification__c.object
<CustomObject>
    <description>Created to send email from the custom object to using Salesforce workflow</description>
    <fields>
        <fullName>Academic_Start_Date_Year__c</fullName>
        <formula>TEXT(year( Academic_Start_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Start Date Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Start_Date__c</fullName>
        <formula>Opportunity__r.Academic_Start_Date__c</formula>
        <label>Academic Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Outbound_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <formula>Opportunity__r.Qualification_Campus__r.Name</formula>
        <label>Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferer__c</fullName>
        <formula>Opportunity__r.Conferer__c</formula>
        <label>Conferer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>have a lookup relationship with contact mapping with email field</description>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <description>have lookup to contact object</description>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <description>have lookup with contact object</description>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Outbound Notification</relationshipLabel>
        <relationshipName>Outbound_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Date_Year__c</fullName>
        <formula>TEXT(year(Current_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Date Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Date__c</fullName>
        <description>Storing Current Date</description>
        <label>Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Date__c</fullName>
        <description>Storing Date for Early Bird Date field</description>
        <label>Early Bird Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earlybird__c</fullName>
        <formula>TEXT(year( Early_Bird_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Early Bird Date Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Interview Attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speak to Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Enrolment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview Attendance with Sponsor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Outbound Notification</relationshipLabel>
        <relationshipName>Outbound_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pearson_Account_Number__c</fullName>
        <formula>Account__r.Pearson_Account_Number__c</formula>
        <label>Pearson Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Campus_Bank_Account_Number__c</fullName>
        <label>Preferred Campus Bank Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Campus_Fax__c</fullName>
        <label>Preferred Campus Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Campus_Phone__c</fullName>
        <label>Preferred Campus Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Campus__c</fullName>
        <formula>TEXT(Opportunity__r.Preferred_Campus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <formula>Opportunity__r.Qualification__c</formula>
        <label>Qualification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rich_Body__c</fullName>
        <description>Body of the notification. Used for Rich notifications</description>
        <label>Rich Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sender_Email__c</fullName>
        <formula>Opportunity__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Name__c</fullName>
        <formula>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Phone__c</fullName>
        <formula>Opportunity__r.Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>For email notification defines the subject that the user wants to send</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Contact__c</fullName>
        <label>Type of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Outbound Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Event__c</columns>
        <columns>Method__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Outbound Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>